--- a/view/pages/home.html
+++ b/view/pages/home.html
@@ -29,19 +29,141 @@
         </li>
       </ul>
     </nav>
-    <div class="container">
-      <div class="jumbotron jumbotron-fluid">
-        <div class="container">
-          <h1 class="display-4">Fluid jumbotron</h1>
-          <p class="lead">
-            This is a modified jumbotron that occupies the entire horizontal
-            space of its parent.
+    <div class="container main">
+      <img class="xmas-img" src="../images/chirstmas.png" alt="chirstmas">
+      <div class="left">
+        <h2>Spesial Natal, Bawa Pulang Hadiah</h2>
+        <p>Hanya sampai besok, buruan</p>
+      </div>
+      <div class="sec-container">
+        <div class="top" style="display: flex; align-items: center;">
+          <h5 style="font-weight: 900;">jual mobil</h5>
+          <img src="../icons/right-arrow.png" style="margin-left: 8px; margin-bottom: 4px; width: 16px; cursor: pointer;" alt="">
+        </div>
+        <div class="bottom">
+          <div class="my-container">
+            <div class="card-car">
+              <div class="nav-card-car">
+                <h6>Spesifikasi</h6>
+                <h4>Mobil Mewah</h4>
+              </div>
+              <img src="../images/left-car.png" alt="">
+            </div>
+            <div class="card-car">
+              <div class="nav-card-car">
+                <h6>Spesifikasi</h6>
+                <h4>Mobil Mewah</h4>
+              </div>
+              <img src="../images/left-car.png" alt="">
+            </div>
+            <div class="card-car">
+              <div class="nav-card-car">
+                <h6>Spesifikasi</h6>
+                <h4>Mobil Mewah</h4>
+              </div>
+              <img src="../images/left-car.png" alt="">
+            </div>
+            <div class="card-car">
+              <div class="nav-card-car">
+                <h6>Spesifikasi</h6>
+                <h4>Mobil Mewah</h4>
+              </div>
+              <img src="../images/left-car.png" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+     
+      </div>
+    </div>
+    <div class="about-container">
+      <div class="left">
+        <h2 style="font-weight: bold;">Fitos Autos</h2>
+        <p>Jual mobil lewat Fitos Autos,<br> cepat lakunya, dapat untungnya</p>
+        <button class="btn-jual">
+          Jual Sekarang
+        </button>
+      </div>
+      <div class="right">
+        <img src="../images/right-car.png" alt="">
+      </div>
+    </div>
+    <div class="step-jual">
+        <h2 style="margin-bottom: 40px;">Tata Cara Jual</h2>
+      <div class="bot">
+        <div class="step-card">
+          <h1 style="position: absolute; right: 8px; top: 0px;">1</h1>
+          <div class="title" style="display: flex; align-items: center; justify-content: center;">
+            
+            <img src="../icons/phone.png" style="height: 40px; margin-right: 16px;" alt="">
+            <h5>Lihat Mobil</h5>
+          </div>
+          <p>
+            Temukan mobil impian anda secara online yang telah kami pilih melalui proses inspeksi professional.
+          </p>
+        </div>
+        <div class="step-card">
+          <h1 style="position: absolute; right: 8px; top: 0px;">2</h1>
+          <div class="title" style="display: flex; align-items: center; justify-content: center;">
+            
+            <img src="../icons/form.png" style="height: 40px; margin-right: 16px;" alt="">
+            <h5>Pilih & Isi <br> Formulir</h5>
+          </div>
+          <p>
+            Temukan mobil impian anda secara online yang telah kami pilih melalui proses inspeksi professional.
+          </p>
+        </div>
+        <div class="step-card">
+          <h1 style="position: absolute; right: 8px; top: 0px;">3</h1>
+          <div class="title" style="display: flex; align-items: center; justify-content: center;">
+            
+            <img src="../icons/cashier.png" style="height: 40px; margin-right: 16px;" alt="">
+            <h5>Bayar</h5>
+          </div>
+          <p>
+            Temukan mobil impian anda secara online yang telah kami pilih melalui proses inspeksi professional.
           </p>
         </div>
       </div>
     </div>
-    <div class="container">
-      
+    <div class="ulasan">
+      <h3 style="font-weight: bold;">Ulasan</h3>
+      <h5 style="font-weight: bold;">Temukan apa yang dikatakan pelanggan Fitos Autos yang telah menjual mobil</h5>
+      <div class="bot">
+        <div class="comment-card">
+          <h6 class="tanggal">Kamis, 15 Desember 2022</h6>
+          <img src="../icons/star.png" alt="">
+          <p>"pokoknya mantap, pelayanannya joss. Recommended banget "</p>
+          <h6>Oleh Arif Gaming</h6>
+        </div>
+        <div class="comment-card">
+          <h6 class="tanggal">Kamis, 15 Desember 2022</h6>
+          <img src="../icons/star.png" alt="">
+          <p>"pokoknya mantap, pelayanannya joss. Recommended banget "</p>
+          <h6>Oleh Arif Gaming</h6>
+        </div>
+        <div class="comment-card">
+          <h6 class="tanggal">Kamis, 15 Desember 2022</h6>
+          <img src="../icons/star.png" alt="">
+          <p>"pokoknya mantap, pelayanannya joss. Recommended banget "</p>
+          <h6>Oleh Arif Gaming</h6>
+        </div>
+        <div class="comment-card">
+          <h6 class="tanggal">Kamis, 15 Desember 2022</h6>
+          <img src="../icons/star.png" alt="">
+          <p>"pokoknya mantap, pelayanannya joss. Recommended banget "</p>
+          <h6>Oleh Arif Gaming</h6>
+        </div>
+      </div>
+    </div>
+    <div class="container faq">
+      <h4>FAQ</h4>
+      <div class="questions">
+        <div class="card">
+          <p>mengapa membeli dari fitos autos</p>
+          <img src="../icons/right-arrow.png" style="margin-left: 8px; margin-bottom: 4px; width: 16px; cursor: pointer;" alt="">
+        </div>
+      </div>
     </div>
   </body>
 </html>
