--- a/view/style/home.css
+++ b/view/style/home.css
@@ -1,7 +1,204 @@
-.navbar{
+.navbar {
   padding: 12px;
 }
 .navbar .nav-item :hover {
   border-bottom: 6px solid black;
 }
+.container.main {
+  position: relative;
+  height: 360px;
+  width: auto;
+}
+.xmas-img {
+  position: absolute;
+  right: 0;
+  height: 360px;
+  
+}
+.container.main .left {
+  border-radius: 20px 0px 0px 20px;
+  position: absolute;
+  color: white;
+  left: 0;
+  width: 40vw;
+  display: flex;
+  text-align: center;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background: rgb(194, 0, 0);
+  background: linear-gradient(
+    90deg,
+    rgba(194, 0, 0, 1) 40%,
+    rgba(0, 212, 255, 0) 100%
+  );
+  height: 360px;
+}
+.left h2{
+  font-weight: 900;
+}
+.sec-container{
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  position: absolute;
+  left: 0; 
+  right: 0; 
+  margin-left: auto;
+  margin-right: auto; 
+  width: 80%;
+  border-radius: 20px;
+  padding: 24px 40px;
+  top: 300px;
+  background-color: white;
+}
+.card-car{
+  margin-right: 24px;
+  position: relative;
+  border-radius: 20px;
+  min-width: 300px;
+  padding: 16px;
+  height: 160px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background: rgb(0,0,0);
+  background: linear-gradient(0deg, rgba(0,0,0,1) 20%, rgba(0,0,0,0) 80%); 
+}
+.card-car .nav-card-car{
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+}
+.nav-card-car h4{
+  font-weight: bold;
+}
+.nav-card-car h6{
+  font-weight: bold;
+}
+.card-car img{
+  position: absolute;
+  width: 11vw;
+  right: 0;
+  bottom: 0;
+}
+.my-container{
+  display: flex;
+  overflow: scroll;
+}
+.about-container{
+  position: relative;
+  margin-top: 200px;
+  display: flex;
+  height: 50vh;
+  width: 100vw;
+  background-color: black;
+  overflow: hidden;
+  justify-content: space-between;
+}
+.about-container .left{
+  padding: 40px 0px 0px 128px;
+  width: 50vw;
+  height: 100%;
+  color: white;
+}
+.about-container p{
+  margin-top: 16px;
+  font-weight: lighter;
+}
+.btn-jual{
+  margin-top: 40px;
+  padding: 8px 56px;
+  outline: none;
+  border: 1px solid white;
+  background-color: black;
+  color: white;
+  border-radius: 12px;
+}
+.btn-jual:hover{
+  background-color: white;
+  color: black;
+  transition: all .2s ease;
+}
+.about-container .right img{
+  height: 50vh;
+}
+.step-jual{
+  display: flex;
+  min-height: 50vh;  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 40px;
+}
+.step-jual .bot{
+  display: flex;
+  padding: 0px 120px 0px 120px;
+  width: 100%;
+  justify-content: space-around;
+}
+.step-card .title{
+  height: 56px;
+}
+.step-jual .bot .step-card{
+  text-align: center;
+  position: relative;
+  width: 40vh;
+  padding: 24px 16px 16px 16px;
+  background-color: black;
+  color: white;
+}
+.step-card p{
+  /* padding: 40px; */
+  font-size: 14px;
+  padding: 8px;
+  margin-bottom: 0px;
+}
+.ulasan{
+  background-color: black;
+  color: white;
+  padding: 40px 128px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.ulasan .bot{
+  display: flex;
+  margin-top: 24px;
+}
+.ulasan img{
+  width: 96px;
+}
+.ulasan .comment-card{
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  color: black;
+  padding: 16px 24px;
+  margin: 0px 16px;
+  width: 20vw;
+  min-width: 20vw;
+}
+.ulasan p{
+  font-size: 16px;
+  text-align: center;
+  margin: 32px 0;
+}
+.ulasan h6{
+  font-size: 12px;
+  font-weight: bold;
+}
 
+.container.faq{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.container.faq h4{
+  margin: 40px 0px;
+}
+.questions.card{
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+}
