--- a/view/pages/home.html
+++ b/view/pages/home.html
@@ -17,6 +17,8 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-sm navbar-light">
+      <img src="../images/logo.png" style="margin-right: 24px
+      ;" alt="">
       <ul class="navbar-nav">
         <li class="nav-item active">
           <a class="nav-link" href="#">Home</a>
@@ -25,9 +27,13 @@
           <a class="nav-link" href="#">Sewa</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Garasi</a>
+          <a class="nav-link" href="garage.html">Garasi</a>
         </li>
       </ul>
+      <button>Logout</button>
+      <div class="img-container">
+        
+      </div>
     </nav>
     <div class="container main">
       <img class="xmas-img" src="../images/chirstmas.png" alt="chirstmas">
@@ -161,9 +167,27 @@
       <div class="questions">
         <div class="card">
           <p>mengapa membeli dari fitos autos</p>
-          <img src="../icons/right-arrow.png" style="margin-left: 8px; margin-bottom: 4px; width: 16px; cursor: pointer;" alt="">
+          <img src="../icons/right-arrow.png" alt="">
+        </div>
+        <div class="card">
+          <p>Apakah aman membeli dari fitos autos</p>
+          <img src="../icons/right-arrow.png" alt="">
+        </div>
+        <div class="card">
+          <p>jika ada mobil cacat apa yang harus saya lakukan</p>
+          <img src="../icons/right-arrow.png" alt="">
         </div>
       </div>
     </div>
+    <footer class="container">
+      <img src="../images/logo.png" width="72px" style="margin-bottom: 8px;" alt="">
+      <p>Portal E-Commerce Mobil yang terintegrasi <br>dan terbesar di Asia Tenggara. Hadir di <br> Malaysia, Indonesia, Thailand, dan Singapura</p>
+      <div class="sosmed-icons">
+        <img src="../icons/instagram.png" alt="">
+        <img src="../icons/facebook.png" alt="">
+        <img src="../icons/linkedin.png" alt="">
+      </div>
+    </footer>
+    <h6 class="copyright">© 2016-2022 PT Fitos Autos Dilindungi oleh hak cipta</h6>
   </body>
 </html>
