--- a/view/style/home.css
+++ b/view/style/home.css
@@ -1,13 +1,9 @@
-.navbar {
-  padding: 12px;
-}
-.navbar .nav-item :hover {
-  border-bottom: 6px solid black;
-}
+
 .container.main {
   position: relative;
   height: 360px;
   width: auto;
+  border-radius: 20px;
 }
 .xmas-img {
   position: absolute;
@@ -193,12 +189,26 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 40px;
 }
 .container.faq h4{
   margin: 40px 0px;
 }
-.questions.card{
+.questions{
+  width: 100%;
+}
+.questions .card{
   display: flex;
   justify-content: space-between;
   flex-direction: row;
+  align-items: center;
+  padding: 8px;
+  margin-bottom: 8px;
+}
+.questions .card p{
+  margin-bottom: 0px;
+}
+.questions .card img{
+  width: 24px;
+  height: 24px;
 }
