--- a/view/pages/garage.html
+++ b/view/pages/garage.html
@@ -17,7 +17,7 @@
       <img src="../images/logo.png" style="margin-right: 24px" alt="" />
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home</a>
+          <a class="nav-link" href="home.html">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Sewa</a>
@@ -36,7 +36,12 @@
       </div>
       <div class="bottom">
         <div class="card">
-          <div class="top">
+          <img class="img-car" src="../images/aven.png" alt="">
+          <div class="wrapper-btn">
+            <button>Check Out</button>
+          </div>
+          
+          <div class="bottom">
             <div class="left">
               <h6>Lamborghini aventador</h6>
               <p>Start from <b>IDR 8.000.000.000</b></p>
@@ -45,13 +50,88 @@
               <img class="logo-car" src="../images/lambo.png" alt="">
             </div>
           </div>
-          <img class="img-car" src="../images/adventador.png" alt="">
-          <p class="detail">
-            Lamborghini Aventador adalah mobil super yang diproduksi oleh Lamborghini. Mobil ini menampilkan desain yang mencolok dan performa yang luar biasa, dengan mesin V12 yang memiliki daya hingga 700 horsepower.
-          </p>
-          <button>Check Out</button>
         </div>
-      </div>
+        <div class="card">
+          <img class="img-car" src="../images/aven.png" alt="">
+          <div class="wrapper-btn">
+            <button>Check Out</button>
+          </div>
+          
+          <div class="bottom">
+            <div class="left">
+              <h6>Lamborghini aventador</h6>
+              <p>Start from <b>IDR 8.000.000.000</b></p>
+            </div>
+            <div class="right">
+              <img class="logo-car" src="../images/lambo.png" alt="">
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <img class="img-car" src="../images/aven.png" alt="">
+          <div class="wrapper-btn">
+            <button>Check Out</button>
+          </div>
+          
+          <div class="bottom">
+            <div class="left">
+              <h6>Lamborghini aventador</h6>
+              <p>Start from <b>IDR 8.000.000.000</b></p>
+            </div>
+            <div class="right">
+              <img class="logo-car" src="../images/lambo.png" alt="">
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <img class="img-car" src="../images/aven.png" alt="">
+          <div class="wrapper-btn">
+            <button>Check Out</button>
+          </div>
+          
+          <div class="bottom">
+            <div class="left">
+              <h6>Lamborghini aventador</h6>
+              <p>Start from <b>IDR 8.000.000.000</b></p>
+            </div>
+            <div class="right">
+              <img class="logo-car" src="../images/lambo.png" alt="">
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <img class="img-car" src="../images/aven.png" alt="">
+          <div class="wrapper-btn">
+            <button>Check Out</button>
+          </div>
+          
+          <div class="bottom">
+            <div class="left">
+              <h6>Lamborghini aventador</h6>
+              <p>Start from <b>IDR 8.000.000.000</b></p>
+            </div>
+            <div class="right">
+              <img class="logo-car" src="../images/lambo.png" alt="">
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <img class="img-car" src="../images/aven.png" alt="">
+          <div class="wrapper-btn">
+            <button>Check Out</button>
+          </div>
+          
+          <div class="bottom">
+            <div class="left">
+              <h6>Lamborghini aventador</h6>
+              <p>Start from <b>IDR 8.000.000.000</b></p>
+            </div>
+            <div class="right">
+              <img class="logo-car" src="../images/lambo.png" alt="">
+            </div>
+          </div>
+        </div>
+        
     </div>
     <footer class="container">
       <img
