--- a/view/style/garage.css
+++ b/view/style/garage.css
@@ -1,23 +1,74 @@
 .container.main{
-
+  
 }
 .container.main .title{
   display: flex;
   align-items: center;
 }
-.bottom .card{
+.bottom{
   display: flex;
-  padding: 24px 32px;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 100%;
+  overflow: hidden;
+  padding: 8px 16px ;
+}
+.bottom .card{
+  overflow: hidden;
+  display: flex;
+  border: none;
+  width: fit-content;
   border-radius: 16px;
-  background-color: var(--primary);
+  background-color: white;
+  margin-bottom: 24px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+.card .bottom{
+  padding: 8px 16px ;
 }
 .bottom .card .top {
   display: flex;
   justify-content: space-between;
 }
 .bottom .card .img-car{
-  width: 40vw;
+  min-height: 30vh;
+  max-height: 30vh;
 }
-.bottom .card .detail{
-  width: 40vw;
+.wrapper-btn{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  background-color: transparent;
+  transition: all .2s ease;
+  
 }
+.wrapper-btn:hover{
+  display: block;
+  background-color: rgba(0, 0, 0, 0.413);
+}
+
+.card button{
+  outline: none;
+  position: absolute;
+  display: block;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  height: max-content;
+  background-color: transparent;
+  color: transparent;
+  border: 1px solid transparent;
+  width: 10vw;
+  border-radius: 20px;
+  padding: 12px;
+  transition: all .2s ease;
+}
+.card button:hover{
+  background-color: white;
+  color: black;
+
+}
+
