--- a/view/pages/garage.html
+++ b/view/pages/garage.html
@@ -1,145 +1,139 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Garasi</title>
-    <link
-      rel="stylesheet"
-      href="../style/bootstrap-4.5.3-dist/css/bootstrap.min.css"
-    />
-    <link rel="stylesheet" href="../style/style.css" />
-    <link rel="stylesheet" href="../style/garage.css">
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-sm navbar-light">
-      <img src="../images/logo.png" style="margin-right: 24px" alt="" />
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="home.html">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Sewa</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="garage.html">Garasi</a>
-        </li>
-      </ul>
-      <button>Logout</button>
-      <div class="img-container"></div>
-    </nav>
-    <div class="container main">
-      <div class="title">
-        <h5>Koleksi Mobil Kami</h5>
-        <img src="../icons/car.png" alt="" />
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Garasi</title>
+  <link rel="stylesheet" href="../style/bootstrap-4.5.3-dist/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="../style/style.css" />
+  <link rel="stylesheet" href="../style/garage.css">
+</head>
+
+<body>
+  <nav class="navbar navbar-expand-sm navbar-light">
+    <img src="../images/logo.png" style="margin-right: 24px" alt="" />
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="home.html">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Sewa</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="garage.html">Garasi</a>
+      </li>
+    </ul>
+    <button>Logout</button>
+    <div class="img-container"></div>
+  </nav>
+  <div class="container main">
+    <div class="title">
+      <h5>Koleksi Mobil Kami</h5>
+      <img src="../icons/car.png" alt="" />
+    </div>
+    <div class="bottom">
+      <div class="card">
+        <img class="img-car" src="../images/aven.png" alt="">
+        <div class="wrapper-btn">
+          <button>Check Out</button>
+        </div>
+
+        <div class="bottom">
+          <div class="left">
+            <h6>Lamborghini aventador</h6>
+            <p>Start from <b>IDR 8.000.000.000</b></p>
+          </div>
+          <div class="right">
+            <img class="logo-car" src="../images/lambo.png" alt="">
+          </div>
+        </div>
       </div>
-      <div class="bottom">
-        <div class="card">
-          <img class="img-car" src="../images/aven.png" alt="">
-          <div class="wrapper-btn">
-            <button>Check Out</button>
+      <div class="card">
+        <img class="img-car" src="../images/aven.png" alt="">
+        <div class="wrapper-btn">
+          <button>Check Out</button>
+        </div>
+
+        <div class="bottom">
+          <div class="left">
+            <h6>Lamborghini aventador</h6>
+            <p>Start from <b>IDR 8.000.000.000</b></p>
           </div>
-          
-          <div class="bottom">
-            <div class="left">
-              <h6>Lamborghini aventador</h6>
-              <p>Start from <b>IDR 8.000.000.000</b></p>
-            </div>
-            <div class="right">
-              <img class="logo-car" src="../images/lambo.png" alt="">
-            </div>
+          <div class="right">
+            <img class="logo-car" src="../images/lambo.png" alt="">
           </div>
         </div>
-        <div class="card">
-          <img class="img-car" src="../images/aven.png" alt="">
-          <div class="wrapper-btn">
-            <button>Check Out</button>
+      </div>
+      <div class="card">
+        <img class="img-car" src="../images/aven.png" alt="">
+        <div class="wrapper-btn">
+          <button>Check Out</button>
+        </div>
+
+        <div class="bottom">
+          <div class="left">
+            <h6>Lamborghini aventador</h6>
+            <p>Start from <b>IDR 8.000.000.000</b></p>
           </div>
-          
-          <div class="bottom">
-            <div class="left">
-              <h6>Lamborghini aventador</h6>
-              <p>Start from <b>IDR 8.000.000.000</b></p>
-            </div>
-            <div class="right">
-              <img class="logo-car" src="../images/lambo.png" alt="">
-            </div>
+          <div class="right">
+            <img class="logo-car" src="../images/lambo.png" alt="">
           </div>
         </div>
-        <div class="card">
-          <img class="img-car" src="../images/aven.png" alt="">
-          <div class="wrapper-btn">
-            <button>Check Out</button>
+      </div>
+      <div class="card">
+        <img class="img-car" src="../images/aven.png" alt="">
+        <div class="wrapper-btn">
+          <button>Check Out</button>
+        </div>
+
+        <div class="bottom">
+          <div class="left">
+            <h6>Lamborghini aventador</h6>
+            <p>Start from <b>IDR 8.000.000.000</b></p>
           </div>
-          
-          <div class="bottom">
-            <div class="left">
-              <h6>Lamborghini aventador</h6>
-              <p>Start from <b>IDR 8.000.000.000</b></p>
-            </div>
-            <div class="right">
-              <img class="logo-car" src="../images/lambo.png" alt="">
-            </div>
+          <div class="right">
+            <img class="logo-car" src="../images/lambo.png" alt="">
           </div>
         </div>
-        <div class="card">
-          <img class="img-car" src="../images/aven.png" alt="">
-          <div class="wrapper-btn">
-            <button>Check Out</button>
+      </div>
+      <div class="card">
+        <img class="img-car" src="../images/aven.png" alt="">
+        <div class="wrapper-btn">
+          <button>Check Out</button>
+        </div>
+
+        <div class="bottom">
+          <div class="left">
+            <h6>Lamborghini aventador</h6>
+            <p>Start from <b>IDR 8.000.000.000</b></p>
           </div>
-          
-          <div class="bottom">
-            <div class="left">
-              <h6>Lamborghini aventador</h6>
-              <p>Start from <b>IDR 8.000.000.000</b></p>
-            </div>
-            <div class="right">
-              <img class="logo-car" src="../images/lambo.png" alt="">
-            </div>
+          <div class="right">
+            <img class="logo-car" src="../images/lambo.png" alt="">
           </div>
         </div>
-        <div class="card">
-          <img class="img-car" src="../images/aven.png" alt="">
-          <div class="wrapper-btn">
-            <button>Check Out</button>
+      </div>
+      <div class="card">
+        <img class="img-car" src="../images/aven.png" alt="">
+        <div class="wrapper-btn">
+          <button>Check Out</button>
+        </div>
+
+        <div class="bottom">
+          <div class="left">
+            <h6>Lamborghini aventador</h6>
+            <p>Start from <b>IDR 8.000.000.000</b></p>
           </div>
-          
-          <div class="bottom">
-            <div class="left">
-              <h6>Lamborghini aventador</h6>
-              <p>Start from <b>IDR 8.000.000.000</b></p>
-            </div>
-            <div class="right">
-              <img class="logo-car" src="../images/lambo.png" alt="">
-            </div>
+          <div class="right">
+            <img class="logo-car" src="../images/lambo.png" alt="">
           </div>
         </div>
-        <div class="card">
-          <img class="img-car" src="../images/aven.png" alt="">
-          <div class="wrapper-btn">
-            <button>Check Out</button>
-          </div>
-          
-          <div class="bottom">
-            <div class="left">
-              <h6>Lamborghini aventador</h6>
-              <p>Start from <b>IDR 8.000.000.000</b></p>
-            </div>
-            <div class="right">
-              <img class="logo-car" src="../images/lambo.png" alt="">
-            </div>
-          </div>
-        </div>
-        
+      </div>
+
     </div>
     <footer class="container">
-      <img
-        src="../images/logo.png"
-        width="72px"
-        style="margin-bottom: 8px"
-        alt=""
-      />
+      <img src="../images/logo.png" width="72px" style="margin-bottom: 8px" alt="" />
       <p>
         Portal E-Commerce Mobil yang terintegrasi <br />dan terbesar di Asia
         Tenggara. Hadir di <br />
@@ -154,5 +148,6 @@
     <h6 class="copyright">
       © 2016-2022 PT Fitos Autos Dilindungi oleh hak cipta
     </h6>
-  </body>
+</body>
+
 </html>
