--- a/view/style/style.css
+++ b/view/style/style.css
@@ -1,19 +1,26 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
 
 
-*{
+* {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
   font-family: 'Open Sans', sans-serif;
 }
-:root{
+
+:root {
   --primary: #FEE7E7;
   --secondary: #910808;
 }
-h1,h2,h3,h4,h5,h6,p{
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
   margin-bottom: 0;
 }
 
@@ -22,10 +29,12 @@ h1,h2,h3,h4,h5,h6,p{
   font-weight: bold;
   padding: 16px 72px;
 }
-.navbar img{
+
+.navbar img {
   width: 72px;
 }
-.navbar button{
+
+.navbar button {
   margin-left: auto;
   border: none;
   padding: 8px 24px;
@@ -33,16 +42,42 @@ h1,h2,h3,h4,h5,h6,p{
   color: white;
   border-radius: 24px;
 }
-.navbar .nav-item :hover {
+
+/* .navbar .nav-item :hover {
   border-bottom: 6px solid black;
+} */
+
+.nav-item {
+  position: relative;
+  margin-right: 32px;
+  width: 100%;
 }
 
-.sosmed-icons img{
+.nav-link::before {
+  transition: 300ms;
+  height: 5px;
+  content: "";
+  position: absolute;
+  background-color: #031D44;
+}
+
+.nav-link-ltr::before {
+  border-radius: 4px;
+  width: 0%;
+  bottom: -5px;
+}
+
+.nav-link-ltr:hover::before {
+  width: 90%;
+}
+
+.sosmed-icons img {
   width: 32px;
   cursor: pointer;
   margin-right: 24px;
 }
-.copyright{
+
+.copyright {
   margin-top: 56px;
   font-weight: bold;
   text-align: center;
