--- a/view/pages/jual.html
+++ b/view/pages/jual.html
@@ -10,6 +10,7 @@
       href="../style/bootstrap-4.5.3-dist/css/bootstrap.min.css"
     />
     <link rel="stylesheet" href="../style/style.css" />
+    <link rel="stylesheet" href="../style/jual.css">
   </head>
 
   <body>
@@ -29,7 +30,17 @@
       <button>Logout</button>
       <div class="img-container"></div>
     </nav>
+    
     <form class="needs-validation container" novalidate>
+      <div class="statis" style="margin-bottom: 24px;">
+        <div class="title">
+          <h5>Formulir Penjualan Mobil</h5>
+          <img src="../icons/car.png" alt="" />
+        </div>
+        <p>
+          harap isi formulir dengan benar
+        </p>
+      </div>
       <div class="form-row">
         <div class="form-group col-md-8">
           <label for="validationCustom01">Nama Mobil</label>
@@ -179,8 +190,29 @@
           <div class="invalid-feedback">Checkbox harus dicentang</div>
         </div>
       </div>
-      <button type="submit" class="btn btn-primary">Sign in</button>
+      <button type="submit" class="my-btn-submit">Kumpulkan</button>
     </form>
+    <footer class="container">
+      <img
+        src="../images/logo.png"
+        width="72px"
+        style="margin-bottom: 8px"
+        alt=""
+      />
+      <p class="mt-2">
+        Portal E-Commerce Mobil yang terintegrasi <br />dan terbesar di Asia
+        Tenggara. Hadir di <br />
+        Malaysia, Indonesia, Thailand, dan Singapura
+      </p>
+      <div class="sosmed-icons mt-3">
+        <img src="../icons/instagram.png" alt="" />
+        <img src="../icons/facebook.png" alt="" />
+        <img src="../icons/linkedin.png" alt="" />
+      </div>
+    </footer>
+    <h6 class="copyright mb-3">
+      © 2016-2022 PT Fitos Autos Dilindungi oleh hak cipta
+    </h6>
     
     <script>
       // Example starter JavaScript for disabling form submissions if there are invalid fields
