--- a/view/style/garage.css
+++ b/view/style/garage.css
@@ -46,7 +46,7 @@
   display: block;
   opacity: 1;
   background: rgb(0,0,0);
-  background: linear-gradient(0deg, rgba(0,0,0,0.7) 60%, rgba(0,0,0,0.3) 100%); 
+  background: linear-gradient(0deg, rgba(0,0,0,0.536834716796875) 60%, rgba(0,0,0,0) 100%);
 }
 
 .card button {
@@ -68,5 +68,5 @@
 .card button:hover {
   background-color: black;
   color: white;
-  border: 1px solid white;
+  border: ;
 }
