--- a/view/pages/garage.html
+++ b/view/pages/garage.html
@@ -16,7 +16,7 @@
     <img src="../images/logo.png" style="margin-right: 24px" alt="" />
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="home.html">Home</a>
+        <a class="nav-link" href="home.php">Home</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Sewa</a>
