--- a/view/style/home.css
+++ b/view/style/home.css
@@ -44,73 +44,29 @@
   margin-right: auto;
   width: 80%;
   border-radius: 20px;
-  padding: 64px 80px;
+  padding: 32px 48px;
   top: 360px;
   background-color: white;
-  height: 400px;
-}
-
-/* ::-webkit-scrollbar {
-  width: 2px;
-  height: 2px;
-}
-
-::-webkit-scrollbar-button {
-  width: 2px;
-  height: 2px;
-} */
-
-::-webkit-scrollbar {
-  width: 0.3em;
-}
-
-::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-}
-
-::-webkit-scrollbar-thumb {
-  background-color: #DF0C0C;
-}
-
-.wrapper {
-  position: absolute;
-  display: block;
-  top: 0;
-  left: 0;
-  width: 400px;
-  max-height: 800px;
-  margin: 0;
-  overflow-y: auto;
-  overflow-x: hidden;
-  transform: rotate(-90deg) translateY(-200px) translateX(10px);
-  transform-origin: right top;
-}
-
-.wrapper>div {
-  display: block;
-  padding: 5px;
-  transform: rotate(90deg);
-  transform-origin: right top;
+  height: 340px;
 }
 
 .card-car {
   margin-right: 24px;
-  margin-bottom: 200px;
   position: relative;
   border-radius: 20px;
   min-width: 360px;
-  /* padding: 16px;  */
-  height: 200px;
+  padding: 16px;
+  height: 216px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  background: rgb(0, 0, 0);
-  background: linear-gradient(0deg, rgba(0, 0, 0, 1) 20%, rgba(0, 0, 0, 0) 80%);
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 10px;
 }
 
 .card-car .nav-card-car {
   width: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   align-items: baseline;
 }
@@ -124,8 +80,9 @@
 }
 
 .card-car img {
+  border-radius: 8px;
   position: absolute;
-  width: 11vw;
+  height: 100%;
   right: 0;
   bottom: 0;
 }
@@ -137,7 +94,7 @@
 
 .about-container {
   position: relative;
-  margin-top: 80px;
+  margin-top: 48px;
   display: flex;
   height: 480px;
   width: 100%;
