--- a/view/style/beli.css
+++ b/view/style/beli.css
@@ -5,6 +5,7 @@
 }
 .container.m-card .left{
   display: flex;
+  flex: 2;
   flex-direction: column;
   justify-content: space-around;
   padding-right: 32px;
@@ -17,4 +18,12 @@
   color: white;
   font-weight: bold;
   background-color: #300303;
+  margin: 32px 0 0 0 ;
+}
+.right{
+  flex: 1;
+}
+.right img{
+  max-width: 40vw;
+  border-radius: 20px;
 }
