--- a/view/style/login.css
+++ b/view/style/login.css
@@ -44,7 +44,7 @@
 }
 .right h2{
   color: var(--primary);
-  margin-bottom: 80px;
+  margin-bottom: 40px;
 }
 .right form{
   width: 100%;
@@ -81,4 +81,14 @@
   background-color: var(--primary);
   color: var(--secondary);
   transition: all .2s ease;
+}
+.regis_link{
+  color: white;
+  font-size: 12px;
+}
+.regis_link a{
+  color: white;
+}
+#confirm-password{
+  margin-top: 24px;
 }
